--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,17 +1,21 @@
 <nav class="navbar navbar-expand-lg navbar-light " style="background-color: #fdfefe
 ;">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">WebApp</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+    <a class="navbar-brand" href="#">
+    	<img src="./assets/indice.png" alt="" width="250" height="50">
+    </a>
     <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
+      <ul class="navbar-nav ms-auto" >
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+          <a class="nav-link" href="#">Carrito</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Tienda</a>
+      	<li class="nav-item dropdown">
+        	<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Menu
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            	<li><a class="dropdown-item" href="#">Inicio</a></li>
+                <li><a class="dropdown-item" href="#">Tienda</a></li>
+            </ul>
         </li>
 
       </ul>
