rutas y lectura de json

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -13,8 +13,8 @@
         	<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Menu
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            	<li><a class="dropdown-item" href="#">Inicio</a></li>
-                <li><a class="dropdown-item" href="#">Tienda</a></li>
+            	<li><a class="dropdown-item" href="/">Inicio</a></li>
+                <li><a class="dropdown-item" href="/products">Tienda</a></li>
             </ul>
         </li>
 
@@ -22,3 +22,13 @@
     </div>
   </div>
 </nav>
+
+
+        <!-- Footer
+        <footer class="py-5 bg-dark">
+            <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2021</p></div>
+        </footer>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="js/scripts.js"></script>
+        </body>
+          -->
