--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,10 @@
 <app-menu></app-menu>
 
 <router-outlet></router-outlet>
+
+
+
+        <!-- Footer-->
+        <footer class="py-2 bg-dark">
+            <div class="container"><p class="m-0 text-center text-white">2021 Copyright &copy;</p></div>
+        </footer>
