--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -20,10 +20,13 @@
               <div class="text-center">
                 <p>{{prod.description}}</p>
               </div>
+              <div class="text-center" *ngFor="let categorie of categories.categories">
+                <p *ngIf="categorie.categori_id==prod.categories[0] || prod.categories[1]==categorie.categori_id"> Category: {{categorie.name}}</p>
+              </div>
             </div>
               <!-- Product actions-->
               <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a>
+                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Agregar al Carrito</a>
                 </div>
               </div>
           </div> 
@@ -32,13 +35,4 @@
             </div>
 </section>
 
-
-        <!-- Footer-->
-        <footer class="py-5 bg-dark">
-            <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2021</p></div>
-        </footer>
-        <!-- Bootstrap core JS-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
 </body>
