--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -7,3 +7,10 @@
     </div>
   </div>
 </header>
+
+
+ <!-- Footer-->
+        <footer class="py-2 bg-dark">
+            <div class="container"><p class="m-0 text-center text-white">2021 Copyright &copy;</p></div>
+        </footer>
+       
